# mental-instability-bot

./: .gitignore  Cargo.toml  docker-compose.yml  flake.nix  module.nix  package.nix  shell.nix
log_checks/: 1-minecraft.toml  2-fabric.toml  2-forge.toml  2-quilt.toml  3-amethystgravity.toml  3-blahaj-totem.toml  3-clientpaintings.toml  3-do_a_barrel_roll.toml  3-mini_tardis.toml  3-moderate-loading-screen.toml  3-omnihopper.toml  3-recursiveresources.toml  3-restart_detector.toml  3-rolling_down_in_the_deep.toml  3-showmeyourskin.toml  3-skinshuffle.toml  3-smart-villagers-follow-emeralds.toml  5-cicada.toml  5-dependency-generic.toml  5-java-version.toml  5-optifine.toml  fabric.toml  optifine.toml
src/: config.rs  constants.rs  log_checking.rs  log_upload.rs  macros.rs  main.rs  thread_adder.rs  util.rs
src/commands/: check_logs.rs  general.rs  mod.rs  modversion.rs  quote.rs  shortcut.rs  tags.rs  update_deps.rs  version.rs  yarn.rs
src/db/: mod.rs
src/log_checking/: checks.rs  environment.rs  mod.rs
src/mapping/: mod.rs  version.rs
src/mappings/: cache.rs  download.rs  mod.rs
tags/: bedrock.json5  binarysearch.json5  cicada.json5  datapacks.json5  ffapi.json5  iris.json5  logs.json5  optifine.json5  quilt.json5  thebug.json5  thrusting.json5
