[package]
name = "mental-instability-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = "1.0.196"
serde_json = "1.0.113"
toml = "0.8.10"
poise = "0.6.1"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.11.24", features = ["json"] }
anyhow = "1.0.79"
flate2 = "1.0.28"
json5 = "0.4.1"
regex = "1.10.3"
