[package]
name = "mental-instability-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serenity = { git = "https://github.com/serenity-rs/serenity.git", features = ["unstable_discord_api"], version = "0.12.1" }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "time"] }
serde = "1.0.203"
serde_json = "1.0.113"
toml = "0.8.10"
poise = { git = "https://github.com/fgardt/poise.git", branch = "feat/user_apps", features = ["unstable"] }
serde_urlencoded = "0.7.1"
reqwest = { version = "0.12.4", features = ["json"] }
anyhow = "1.0.79"
flate2 = "1.0.28"
json5 = "0.4.1"
regex = "1.10.3"
zip = "2.1.3"
bytes = { version = "1.6.0", features = ["std"] }
number_prefix = "0.4.0"

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector", "framework"]
version = "0.12.0"

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
